[project]
name = "base_robyn"
version = "0.1.0"
description = "A base Robyn project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "robyn"
]
[dependency-groups]
dev = [
    "pytest",
    "pytest-html"
]
[tool.ruff]
line-length = 140
indent-width = 4
target-version = "py313"
src = ["app"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501",  # line too long
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
